fix spacing in nuxt-content

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -57,7 +57,7 @@ h4 {
 }
 
 .nuxt-content {
-  * + * {
+  > * + * {
     @apply mt-6;
   }
 
@@ -81,6 +81,10 @@ h4 {
       content: counter(olItem) ".";
       @apply inline-block mr-1;
     }
+  }
+
+  li {
+    @apply mt-2;
   }
 
   blockquote {
